metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/QC_Summary__c.object-meta.xml
<CustomObject>
    <description>Quality Check Summary object provides insights for a work unit, specifically it shows if work unit completed per defined quality. If some quality bars are not satisfied then comments provided with the explanation.</description>
    <label>QC Summary</label>
    <nameField>
        <label>QC Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>