metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/External_Scorecard_Url__c.field-meta.xml
<CustomField>
    <fullName>External_Scorecard_Url__c</fullName>
    <label>External Scorecard Url</label>
    <type>Url</type>
</CustomField>