metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Grading_Date__c.field-meta.xml
<CustomField>
    <fullName>Grading_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grading Date</label>
    <type>Date</type>
</CustomField>