metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Grading_Date_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Grading_Date_Week_Number__c</fullName>
    <formula>MOD(FLOOR( ( DATEVALUE( CreatedDate ) - DATE(2006,01,01))/7),52)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grading Date Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>