metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Imported_From_QC_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Imported_From_QC_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field to identify whether the record is created through script or by user. When TRUE: it indicates that the record was created by the script during the import process.</description>
    <inlineHelpText>Temporary field to identify whether the record is created through script or by user. When TRUE: it indicates that the record was created by the script during the import process.</inlineHelpText>
    <label>Imported From QC Tracker?</label>
    <type>Checkbox</type>
</CustomField>