metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QC_Result</valueSetName>
    </valueSet>
</CustomField>