metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Task_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_Date__c</fullName>
    <label>Task Created Date</label>
    <type>DateTime</type>
</CustomField>