metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Task_Proof_Of_Work_URL__c.field-meta.xml
<CustomField>
    <fullName>Task_Proof_Of_Work_URL__c</fullName>
    <description>Proof work copied over from Related task</description>
    <label>Task Proof Of Work URL</label>
    <type>Url</type>
</CustomField>