metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <description>Task subject copied over from Task</description>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>