metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Task_URL__c.field-meta.xml
<CustomField>
    <fullName>Task_URL__c</fullName>
    <formula>IF(Task_URL_Href__c &lt;&gt; null, HYPERLINK( Task_URL_Href__c , &apos;&lt;- Go to the related Task&apos;, &apos;_self&apos;), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task URL</label>
    <type>Text</type>
</CustomField>