metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/fields/Task_URL_Href__c.field-meta.xml
<CustomField>
    <fullName>Task_URL_Href__c</fullName>
    <label>Task URL Href</label>
    <type>Url</type>
</CustomField>