metadata/sf-prod/force-app/main/default/objects/QC_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grading_Date__c</columns>
    <columns>Result__c</columns>
    <columns>Score__c</columns>
    <columns>Task_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>